fixup! authPrompt: Iconize the cancel button
Add some extra padding to the right

--- a/data/theme/gnome-shell-sass/_common.scss
+++ b/data/theme/gnome-shell-sass/_common.scss
@@ -1965,7 +1965,7 @@ StScrollBar {
     }
   }
   .cancel-button {
-    padding: 0;
+    padding: 0px 12px 0px 0px;
     border-radius: 16px;
     width: 32px;
     height: 32px;
